# opentelemetry-php-distro

./: .gitignore  DEVELOPMENT.md  README.md  composer.json  phpunit.xml  phpunit_component_tests.xml  project.properties
.github/workflows/: build-arch-matrix-generator.yml  build-native.yml  build-packages.yml  build.yml  native-dev-tools-build.yml  release.yml  scorecard.yml  test-otel-unit.yml  test-packages-component-tests.yml  test-php-static-and-unit.yml  test-phpt.yml
docs/: README.md
docs/getting-started/: limitations.md  setup.md
docs/reference/: configuration.md  performance-overhead.md  supported-technologies.md
docs/release-notes/: index.md
generated_composer_lock_files/: dev.json  prod.json  prod_static_check.json  test.json
packaging/: nfpm.yaml
packaging/configs/: opentelemetry_distro_custom_template.ini
packaging/scripts/: post-install.sh
packaging/test/: smokeTestUninstalled.php
prod/native/: CMakeLists.txt  CMakePresets.json  (+1 more)
prod/native/libsemconv/: CMakeLists.txt
prod/native/libsemconv/include/opentelemetry/semconv/: app_attributes.h  aws_attributes.h  az_attributes.h  azure_attributes.h  azure_metrics.h  cassandra_attributes.h  cicd_attributes.h  cloud_attributes.h  code_attributes.h  container_attributes.h  container_metrics.h  cpu_attributes.h  cpu_metrics.h  db_attributes.h  db_metrics.h  deployment_attributes.h  device_attributes.h  dns_attributes.h  enduser_attributes.h  event_attributes.h  exception_attributes.h  faas_attributes.h  faas_metrics.h  feature_flag_attributes.h  gcp_attributes.h  gen_ai_attributes.h  gen_ai_metrics.h  http_attributes.h  hw_attributes.h  hw_metrics.h  k8s_attributes.h  k8s_metrics.h  linux_attributes.h  mainframe_attributes.h  message_attributes.h  messaging_attributes.h  messaging_metrics.h  net_attributes.h  network_attributes.h  nfs_attributes.h  (+24 more)
tests/: bootstrap.php  bootstrapProdStaticCheck.php  dummyFuncForTestsWithoutNamespace.php
(+810 files in other folders)
